# main_oct_project

./: .gitignore  CMakeLists.txt  info.txt  main.cpp  vcpkg.json
scr/: algo.cpp  main.cpp
